--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="assets/js/snakegame.js"></script>
+    <link rel="stylesheet" href="assets/css/styles.css" type="text/css"></link>
+    
 </head>
 <body>
-    
+    <canvas id='underworld-bg' height="700" width="700"></canvas>
+    <script src="assets/js/snakegame.js"></script>
 </body>
 </html>
