Added a main section in html and deleted unwanted CSS, so I could write less CSS and achieve same outcome using Flexbox

--- a/index.html
+++ b/index.html
@@ -16,31 +16,33 @@
     <header>
         <h1 class="game-name">Hades Snake Game</h1>
     </header>
-    <section id="left-side-screen-hades">
-        <div id="hades-welcome" class="container">
-        </div>
-        <div id="contact-hidden-form">
-            <button id="contact-form-activate">Contact Me</button>
-        </div>
-    </section>
-    <canvas id='underworld-bg' height="600" width="600"></canvas>
-    <section id="right-side-screen-hades">
-        <div id="scores">
-            <h2>Score: <span class="current-score">00</span></h2>
-            <h2>Highest Score: <span class="highest-score">00</span></h2>
-        </div>
-        <div id="controls-for-user" class="on-screen-buttons">
-            <button class="arrow-keys">UP</button>
-            <button class="arrow-keys">RIGHT</button>
-            <button class="arrow-keys">DOWN</button>
-            <button class="arrow-keys">LEFT</button>
-        </div>
-        <div class="socials">
-            <a href="#"><i class="fa-brands fa-instagram"></i></a>
-            <a href="#"><i class="fa-brands fa-dribbble"></i></a>
-            <a href="#"><i class="fa-brands fa-github"></i></a>
-            <a href="#"><i class="fa-brands fa-youtube"></i></a>
-        </div>
+    <section class="underworld-main-screen">
+        <section id="left-side-screen-hades">
+            <div id="hades-welcome" class="container">
+            </div>
+            <div id="contact-hidden-form">
+                <button id="contact-form-activate">Contact Me</button>
+            </div>
+        </section>
+        <canvas id='underworld-bg' height="600" width="600"></canvas>
+        <section id="right-side-screen-hades">
+            <div id="scores">
+                <h2>Score: <span class="current-score">00</span></h2>
+                <h2>Highest Score: <span class="highest-score">00</span></h2>
+            </div>
+            <div id="controls-for-user" class="on-screen-buttons">
+                <button class="arrow-keys">UP</button>
+                <button class="arrow-keys">RIGHT</button>
+                <button class="arrow-keys">DOWN</button>
+                <button class="arrow-keys">LEFT</button>
+            </div>
+            <div class="socials">
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-dribbble"></i></a>
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+            </div>
+        </section>
     </section>
     <script src="assets/js/snakegame.js"></script>
 </body>
