added new trasparent images displayed them where they have to be displayed. CSS lines removed as not required

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     </header>
     <section class="underworld-main-screen">
         <section id="left-side-screen-hades">
-            <div id="hades-welcome" class="container">
+            <div id="hades-welcome">
+                <img class="hadesone" src="assets/images/hadeswelcomeintro.png" alt="disney hades introducing himself">
             </div>
             <div id="contact-hidden-form">
                 <button id="contact-form-activate">Contact Me</button>
@@ -26,6 +27,7 @@
         </section>
         <canvas id='underworld-bg' height="600" width="600"></canvas>
         <section id="right-side-screen-hades">
+            <img src="assets/images/hadesgamerules.png" alt="hades from hercules explaining the rules of the game">
             <div id="scores">
                 <h2>Score: <span class="current-score">00</span></h2>
                 <h2>Highest Score: <span class="highest-score">00</span></h2>
