--- a/index.html
+++ b/index.html
@@ -13,43 +13,42 @@
 </head>
 
 <body>
-    <header>
-        <h1 class="game-name">Hades Snake Game</h1>
-    </header>
-    <section class="underworld-main-screen">
-        <section id="left-side-screen-hades">
-            <div id="hades-welcome">
-                <img class="hadesone" src="assets/images/hadeswelcomeintro.png" alt="disney hades introducing himself">
-            </div>
-            <div id="contact-hidden-form">
-                <button id="contact-form-activate" class="mouse">Contact Me</button>
-            </div>
-        </section>
-        <canvas id='underworld-bg'></canvas>
-        <section id="right-side-screen-hades">
-            <img class="hadestwo" src="assets/images/hadesgamerules.png" alt="hades from hercules explaining the rules of the game">
-            <div id="scores">
-                <h2>Score: <span class="current-score">00</span></h2>
-                <h2>Highest Score: <span class="highest-score">00</span></h2>
-            </div>
-            <div id="controls-for-user" class="on-screen-buttons">
-                <button class="arrow-keys">LEFT</button>
-                <button class="arrow-keys"><i class="fa-solid fa-square-chevron-up"></i> UP</button>
-                <button class="arrow-keys">RIGHT</button>
-                <button class="arrow-keys">BOTTOM</button>
-            </div>
-            <div class="socials">
-                <a href="https://www.instagram.com/mk_kefalas/" rel="noopener" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://dribbble.com/MKefalas" rel="noopener" target="_blank"><i class="fa-brands fa-dribbble"></i></a>
-                <a href="https://github.com/Frangelicomk" rel="noopener" target="_blank"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.youtube.com/channel/UCk8uhVNXee2_r2m-JNvd2mA" target="_blank" rel="noopener"><i class="fa-brands fa-youtube"></i></a>
-            </div>
-        </section>
+    <h1 class="game-name">Hades Snake Game</h1>
+    <section class="flex main-game-area">
+        <div id="hades-welcome">
+            <img class="hadesone" src="assets/images/hadeswelcomeintro.png" alt="disney hades introducing himself"
+                height="300" width="250">
+        </div>
+        <div id="contact-hidden-form">
+            <button id="contact-form-activate" class="mouse">Contact Me</button>
+        </div>
+
+        <canvas id='underworld-bg' height="600" width="600"></canvas>
+
+        <img class="hadestwo" src="assets/images/hadesgamerules.png"
+            alt="hades from hercules explaining the rules of the game" height="300" width="250">
+        <div id="scores">
+            <h2>Score: <span class="current-score">00</span></h2>
+            <h2>Highest Score: <span class="highest-score">00</span></h2>
+        </div>
+        <div id="controls-for-user" class="on-screen-buttons">
+            <button class="arrow-keys">LEFT</button>
+            <button class="arrow-keys"><i class="fa-solid fa-square-chevron-up"></i> UP</button>
+            <button class="arrow-keys">RIGHT</button>
+            <button class="arrow-keys">BOTTOM</button>
+        </div>
+        <div class="socials">
+            <a href="https://www.instagram.com/mk_kefalas/" rel="noopener" target="_blank"><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://dribbble.com/MKefalas" rel="noopener" target="_blank"><i
+                    class="fa-brands fa-dribbble"></i></a>
+            <a href="https://github.com/Frangelicomk" rel="noopener" target="_blank"><i
+                    class="fa-brands fa-github"></i></a>
+            <a href="https://www.youtube.com/channel/UCk8uhVNXee2_r2m-JNvd2mA" target="_blank" rel="noopener"><i
+                    class="fa-brands fa-youtube"></i></a>
+        </div>
+
     </section>
-    <div id="follower">
-        <div id="circle1"></div>
-        <div id="circle2"></div>
-      </div>
     <script src="assets/js/snakegame.js"></script>
 </body>
 
