--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <button class="arrow-keys">RIGHT</button>
             <button class="arrow-keys">BOTTOM</button>
         </div>
+        <div></div>
         <div class="socials">
             <a href="https://www.instagram.com/mk_kefalas/" rel="noopener" target="_blank"><i
                     class="fa-brands fa-instagram"></i></a>
