fixed a bug when GAME OVER snake wont reset to start position when you press any key.tidy up JS code and added a <p> element in index.html to write GAME over message

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
         <canvas id='underworld-bg' height="800" width="800"></canvas>
 
+        <p id="game-status"></p>
+        
+
         <img class="hadestwo" src="assets/images/hadesgamerules.png"
             alt="hades from hercules explaining the rules of the game" height="300" width="250">
         <div id="scores">
