--- a/index.html
+++ b/index.html
@@ -14,34 +14,34 @@
 
 <body>
     <h1 class="game-name">Hades Snake Game</h1>
+    <p id="game-status"></p>
     <section class="flex main-game-area">
-        <div id="hades-welcome">
+        <!-- <div id="hades-welcome">
             <img class="hadesone" src="assets/images/hadeswelcomeintro.png" alt="disney hades introducing himself"
                 height="300" width="250">
         </div>
         <div id="contact-hidden-form">
             <button id="contact-form-activate" class="mouse">Contact Me</button>
-        </div>
+        </div> -->
 
         <canvas id='underworld-bg' height="500" width="500"></canvas>
 
-        <p id="game-status"></p>
         
-
-        <img class="hadestwo" src="assets/images/hadesgamerules.png"
-            alt="hades from hercules explaining the rules of the game" height="300" width="250">
-        <div id="scores">
-            <h2>Score: <span class="current-score">00</span></h2>
-            <h2>Highest Score: <span class="highest-score">00</span></h2>
-        </div>
-        <div id="controls-for-user" class="on-screen-buttons">
+        
+        <!-- <img class="hadestwo" src="assets/images/hadesgamerules.png"
+            alt="hades from hercules explaining the rules of the game" height="300" width="250"> -->
+            <div id="scores">
+                <h2>Score: <span class="current-score">00</span></h2>
+                <h2>Highest Score: <span class="highest-score">00</span></h2>
+            </div>
+        <!-- <div id="controls-for-user" class="on-screen-buttons">
             <button class="arrow-keys">LEFT</button>
             <button class="arrow-keys"><i class="fa-solid fa-square-chevron-up"></i> UP</button>
             <button class="arrow-keys">RIGHT</button>
             <button class="arrow-keys">BOTTOM</button>
         </div>
-        <div></div>
-        <div class="socials">
+        <div></div> -->
+        <!-- <div class="socials">
             <a href="https://www.instagram.com/mk_kefalas/" rel="noopener" target="_blank"><i
                     class="fa-brands fa-instagram"></i></a>
             <a href="https://dribbble.com/MKefalas" rel="noopener" target="_blank"><i
@@ -50,7 +50,7 @@
                     class="fa-brands fa-github"></i></a>
             <a href="https://www.youtube.com/channel/UCk8uhVNXee2_r2m-JNvd2mA" target="_blank" rel="noopener"><i
                     class="fa-brands fa-youtube"></i></a>
-        </div>
+        </div> -->
 
     </section>
     <script src="assets/js/snakegame.js"></script>
