added an external js library for joystick usage when using mobile device and set it up to work with this project. THe library and the joystick were created by Author = Bobbotech, and it was mostly copy paste

--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Underworld</title>
-    <script src="https://kit.fontawesome.com/28d7ca0192.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
-    </link>
-
+    <script src="assets/js/joy.js"></script>
 </head>
 
 <body>
@@ -37,14 +35,10 @@
                         class="fa-brands fa-youtube"></i></a>
             </div>
         </section>
-        <div id="controls-for-user" class="on-screen-buttons">
-                <button class="arrow-keys">LEFT</button>
-                <button class="arrow-keys"><i class="fa-solid fa-square-chevron-up"></i> UP</button>
-                <button class="arrow-keys">RIGHT</button>
-                <button class="arrow-keys">BOTTOM</button>
-        </div>
-         
+        <!-- this was copied from https://www.cssscript.com/onscreen-joystick/#:~:text=Description%3A-,JoyStick.,for%20your%20game%20web%20app with Author bobbotech -->
+        <div id="joyDiv" style="width:200px;height:200px;margin-bottom:20px;margin:50px"></div>
     </div>
+    <script src="https://kit.fontawesome.com/28d7ca0192.js" crossorigin="anonymous"></script>
     <script src="assets/js/snakegame.js"></script>
 </body>
 
