centered joystick and changed the color of the joystick

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
         </section>
         <!-- this was copied from https://www.cssscript.com/onscreen-joystick/#:~:text=Description%3A-,JoyStick.,for%20your%20game%20web%20app with Author bobbotech -->
-        <div id="joyDiv" style="width:200px;height:200px;margin-bottom:20px;margin:50px"></div>
+        <div id="joyDiv" style="width:200px;height:200px;margin-bottom:0px;margin:auto"></div>
     </div>
     <script src="https://kit.fontawesome.com/28d7ca0192.js" crossorigin="anonymous"></script>
     <script src="assets/js/snakegame.js"></script>
