added screen reader only spans for links

--- a/index.html
+++ b/index.html
@@ -57,13 +57,21 @@
                 <h2>Highest Score: <span class="highest-score">00</span></h2>
             </div>
             <div class="socials">
-                <a href="https://www.instagram.com/mk_kefalas/" rel="noopener" target="_blank"><i
+                <a href="https://www.instagram.com/mk_kefalas/" rel="noopener" target="_blank"><span class="sr-only">
+                    this link takes you to my instagram page
+                </span><i
                         class="fa-brands fa-instagram"></i></a>
-                <a href="https://dribbble.com/MKefalas" rel="noopener" target="_blank"><i
+                <a href="https://dribbble.com/MKefalas" rel="noopener" target="_blank"><span class="sr-only">
+                    this link takes you to my dribble page
+                </span><i
                         class="fa-brands fa-dribbble"></i></a>
-                <a href="https://github.com/Frangelicomk" rel="noopener" target="_blank"><i
+                <a href="https://github.com/Frangelicomk" rel="noopener" target="_blank"><span class="sr-only">
+                    this link takes you to my github page
+                </span><i
                         class="fa-brands fa-github"></i></a>
-                <a href="https://www.youtube.com/channel/UCk8uhVNXee2_r2m-JNvd2mA" target="_blank" rel="noopener"><i
+                <a href="https://www.youtube.com/channel/UCk8uhVNXee2_r2m-JNvd2mA" target="_blank" rel="noopener"><span class="sr-only">
+                    this link takes you to my youtube channel
+                </span><i
                         class="fa-brands fa-youtube"></i></a>
             </div>
         </section>
