created a new JS file for socials so we can change the colors of links  JS

--- a/index.html
+++ b/index.html
@@ -56,30 +56,31 @@
                 <h2>Score: <span class="current-score">00</span></h2>
                 <h2>Highest Score: <span class="highest-score">00</span></h2>
             </div>
-            <div class="socials">
-                <a href="https://www.instagram.com/mk_kefalas/" rel="noopener" target="_blank"><span class="sr-only">
-                    this link takes you to my instagram page
-                </span><i
-                        class="fa-brands fa-instagram"></i></a>
-                <a href="https://dribbble.com/MKefalas" rel="noopener" target="_blank"><span class="sr-only">
-                    this link takes you to my dribble page
-                </span><i
-                        class="fa-brands fa-dribbble"></i></a>
-                <a href="https://github.com/Frangelicomk" rel="noopener" target="_blank"><span class="sr-only">
-                    this link takes you to my github page
-                </span><i
-                        class="fa-brands fa-github"></i></a>
-                <a href="https://www.youtube.com/channel/UCk8uhVNXee2_r2m-JNvd2mA" target="_blank" rel="noopener"><span class="sr-only">
-                    this link takes you to my youtube channel
-                </span><i
-                        class="fa-brands fa-youtube"></i></a>
-            </div>
+        </section>
+        <section id="social-links" class="socials">
+            <a href="https://www.instagram.com/mk_kefalas/" rel="noopener" target="_blank"><span class="sr-only">
+                this link takes you to my instagram page
+            </span><i
+                    class="fa-brands fa-instagram"></i></a>
+            <a href="https://dribbble.com/MKefalas" rel="noopener" target="_blank"><span class="sr-only">
+                this link takes you to my dribble page
+            </span><i
+                    class="fa-brands fa-dribbble"></i></a>
+            <a href="https://github.com/Frangelicomk" rel="noopener" target="_blank"><span class="sr-only">
+                this link takes you to my github page
+            </span><i
+                    class="fa-brands fa-github"></i></a>
+            <a href="https://www.youtube.com/channel/UCk8uhVNXee2_r2m-JNvd2mA" target="_blank" rel="noopener"><span class="sr-only">
+                this link takes you to my youtube channel
+            </span><i
+                    class="fa-brands fa-youtube"></i></a>
         </section>
         <!-- this was copied from https://www.cssscript.com/onscreen-joystick/#:~:text=Description%3A-,JoyStick.,for%20your%20game%20web%20app with Author bobbotech -->
         <div id="joyDiv" style="width:200px;height:200px;margin-bottom:0px;margin:auto"></div>
     </div>
     <script src="https://kit.fontawesome.com/28d7ca0192.js" crossorigin="anonymous"></script>
     <script src="assets/js/snakegame.js"></script>
+    <script src="assets/js/socials.js"></script>
 </body>
 
 </html>
