button issues on resizing looking to fix this still testing

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
     </div>
     <div class="bg game-area">
       <h1 class="game-name">Hades Snake Game</h1>
-      <section class="flex main-game-area">
-        <div class="button-wrap order-1">
-          <button id="restart" class="button-34">Restart</button>
-        </div>
+      <section class="main-game-area">
+          <div class="button-wrap order-1">
+            <button id="restart" class="button-34">Restart</button>
+          </div>
         <canvas
           id="underworld-bg"
           class="order-2"
