added a new button for the game menu that will take user back to rules.Will set this up next

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
       <section class="main-game-area">
           <div class="button-wrap order-1">
             <button id="restart" class="button-34">Restart</button>
+            <button id="back-to-rules" class="button-34">Read the Rules</button>
           </div>
         <canvas
           id="underworld-bg"
