autocomplete on input turned off to improve user experience

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             placeholder="Enter your Name"
             aria-required="true"
             aria-invalid="false"
+            autocomplete="off"
           />
           <button type="button" class="button-34" id="submitName">
             Declare your name to Hades
