--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <link rel="manifest" href="assets/favicon/site.webmanifest" />
     <link rel="stylesheet" href="assets/css/styles.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/mainMenu.css" type="text/css" />
+    <link rel="stylesheet" href="assets/css/settings.css" type="text/css" />
     <script src="assets/js/joy.js"></script>
   </head>
 
@@ -63,7 +64,6 @@
       <source src="assets/audio/ogg/audio_dead.ogg" type="audio/ogg" />
       <source src="assets/audio/audio_dead.mp3" type="audio/mpeg" />
     </audio>
-
     <div class="main-menu">
       <div class="dialogue">
         <div class="bubble">
@@ -168,6 +168,7 @@
       src="https://kit.fontawesome.com/28d7ca0192.js"
       crossorigin="anonymous"
     ></script>
+    <script src="assets/js/settings.js"></script>
     <script src="assets/js/loadingmenu.js"></script>
     <script src="assets/js/snakegame.js"></script>
     <script src="assets/js/socials.js"></script>
