--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge" /> -->
     <meta
       name="description"
       content="A snake game created for my milestone project 2 for code-Institute"
     />
     <meta
       name="keywords"
-      content="HTML, CSS,Font-Awesome, Google-Fonts, Javascirpt"
+      content="HTML, CSS, Font-Awesome, Google-Fonts, Javascirpt"
     />
     <meta name="author" content="Michael Kefalas" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
